force-app/main/default/objects/Partner_Booking_Order__c/Partner_Booking_Order__c.object-meta.xml
<CustomObject>
    <label>Partner Booking Order</label>
    <nameField>
        <label>Program Year</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Booking Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>