force-app/main/default/objects/Partner_Booking_Order__c/fields/Dealer_Order__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Order__c</fullName>
    <label>Dealer Order</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Dealer Order Account must be the same as the Booking Order Account</errorMessage>
        <filterItems>
            <field>Dealer_Order__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Dealer_Order__c.Is_Booking_Order__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Dealer_Order__c</referenceTo>
    <relationshipLabel>Partner Booking Orders</relationshipLabel>
    <relationshipName>Partner_Booking_Orders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>