force-app/main/default/objects/Partner_Booking_Order__c/fields/Pontoon_Volume_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Pontoon_Volume_Discount_Percent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Pontoon Volume Discount Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>