force-app/main/default/objects/Partner_Booking_Order__c/fields/Uniquifier__c.field-meta.xml
<CustomField>
    <fullName>Uniquifier__c</fullName>
    <label>Uniquifier</label>
    <length>23</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>